src/js/components/Header/Header.css
header {
  width: 100%;
}
.header-container {
  padding: 5px 0;
  width: 100%;
  position: relative;
}

.logo {
  background: url(../../../images/poppy.svg) no-repeat;
  background-size: 126px;
  display: inline-block;
  height: 126px;
  width: 126px;
}

@media only screen and (max-width: 979px) {
  .logo {
    width: auto;
  }
}

